--- a/ooniprobe/Storyboards/Dashboard.storyboard
+++ b/ooniprobe/Storyboards/Dashboard.storyboard
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina5_9" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina5_9" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -162,7 +164,7 @@
         <!--Test Running View Controller-->
         <scene sceneID="o6C-L4-nq5">
             <objects>
-                <viewController storyboardIdentifier="test_running" modalPresentationStyle="fullScreen" id="4q0-13-6dh" customClass="TestRunningViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="test_running" id="4q0-13-6dh" customClass="TestRunningViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="tHi-Ui-7Hp"/>
                         <viewControllerLayoutGuide type="bottom" id="iDt-w7-KI4"/>
